handlers: rdiff handler for applying librsync's rdiff patches
The rdiff handler adds support for applying binary
delta patches generated by librsync's rdiff tool,
see http://librsync.sourcefrog.net

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -165,6 +165,10 @@ ifeq ($(CONFIG_GUNZIP),y)
 LDLIBS += z
 endif
 
+ifeq ($(CONFIG_RDIFFHANDLER),y)
+LDLIBS += rsync
+endif
+
 ifeq ($(CONFIG_REMOTE_HANDLER),y)
 LDLIBS += zmq
 endif
