travis: add rdiff handler defconfig build
Make travis build a defconfig with rdiff handler support.

Note that travis's Ubuntu Trusty is that old that it ships with
librsync 0.9.7. Versions 2.0.1 onwards (released 2017-10-17) have
  typedef void rs_trace_fn_t(rs_loglevel level, char const *msg)
while earlier versions such as travis's have
  typedef void rs_trace_fn_t(int level, char const *msg).
Hence the compiler warning in CI which cannot be silenced by
a gcc pragma as travis's gcc is too old, too. Unfortunately,
librsync doesn't provide a version #define palatable to a #ifdef.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_install:
     - sudo apt-get install -y libsystemd-daemon-dev
     - sudo apt-get install -y libsystemd-daemon0
     - sudo apt-get install -y check
+    - sudo apt-get install -y librsync1
+    - sudo apt-get install -y librsync-dev
 
 script:
     - sudo ln -sf /usr/lib/x86_64-linux-gnu/pkgconfig/lua5.2.pc /usr/lib/x86_64-linux-gnu/pkgconfig/lua.pc
