bootloader: support for alternative U-Boot library
Support for U-Boot is done with a libubootenv library generated by the
u-boot-fw-tools package in OE. This library is taken from U-Boot code, but it
must be generaded with the exact U-Boot machine as the bootloader. In
case of mismatch, the environment gets corrupted.

A new library is thought to overcome to these issues and to be more
independent from U-Boot source code. Plan is to have a generic interface
to the environment. Improvements for security are also planned, as
introducing signed environments.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/bootloader/Config.in
+++ b/bootloader/Config.in
@@ -23,9 +23,6 @@ config UBOOT
 	  Support for U-Boot
 	  https://www.denx.de/wiki/U-Boot
 
-comment "U-Boot support needs libubootenv, libz"
-	depends on !HAVE_LIBUBOOTENV || !HAVE_ZLIB
-
 config BOOTLOADER_NONE
 	bool "Environment in RAM"
 	help
@@ -48,6 +45,25 @@ config UBOOT_FWENV
 	  This is the file described in U-Boot documentation
 	  in the tools directory. It tells where the U-Boot
 	  environment is saved.
+
+config UBOOT_NEWAPI
+	bool "Link to new libubootenv API (LGPL-2.1)"
+	depends on UBOOT
+	help
+	  Use a replacement of tools/env from U-Boot
+	  This is to link to libubootenv
+
+comment "U-Boot support needs libubootenv, libz"
+	depends on !HAVE_LIBUBOOTENV || !HAVE_ZLIB
+
+config UBOOT_DEFAULTENV
+	string "U-Boot Initial Environment file"
+	depends on UBOOT_NEWAPI
+	default "/etc/u-boot-initial-env"
+	help
+	  This is the file with the initial environment delivered
+	  with the bootloader. It is used by SWUpdate if no environment
+	  is found on the storage.
 
 config GRUBENV_PATH
 	string "GRUB Environment block file path"
