swuforward: rework to use new Website
swuforward requires to start the slaves with the old API, and this
forbids to update directly the slave via Web. This reworks swuforward to
connect to slaves via Websockets, and changes to use the new API. The
old API is then dropped as there are less usages of it.

Signed-off-by: Stefano Babic <sbabic@denx.de>
Tested-by: Pierre-Jean Texier <pjtexier@koncepto.io>
Tested-by: Joris Offouga <offougajoris@gmail.com>

--- a/Kconfig
+++ b/Kconfig
@@ -73,6 +73,14 @@ config HAVE_JSON_C
 	bool
 	option env="HAVE_JSON_C"
 
+config HAVE_LIBWEBSOCKETS
+	bool
+	option env="HAVE_LIBWEBSOCKETS"
+
+config HAVE_URIPARSER
+	bool
+	option env="HAVE_URIPARSER"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
