--- a/Makefile.deps
+++ b/Makefile.deps
@@ -57,3 +57,11 @@ endif
 ifeq ($(HAVE_JSON_C),)
 export HAVE_JSON_C = y
 endif
+
+ifeq ($(HAVE_LIBWEBSOCKETS),)
+export HAVE_LIBWEBSOCKETS = y
+endif
+
+ifeq ($(HAVE_URIPARSER),)
+export HAVE_URIPARSER = y
+endif
