--- a/Makefile.flags
+++ b/Makefile.flags
@@ -221,6 +221,11 @@ endif
 endif
 endif
 
+# SWU forwarder
+ifneq ($(CONFIG_SWUFORWARDER_HANDLER),)
+LDLIBS += websockets uriparser
+endif
+
 # If a flat binary should be built, CFLAGS_swupdate="-elf2flt"
 # env var should be set for make invocation.
 # Here we check whether CFLAGS_swupdate indeed contains that flag.
