Add more config options to debian_defconfig
Signed-off-by: Bastian Germann <bastiangermann@fishpost.de>

--- a/configs/debian_defconfig
+++ b/configs/debian_defconfig
@@ -1,11 +1,14 @@
+CONFIG_SYSTEMD=y
 CONFIG_HW_COMPATIBILITY=y
 CONFIG_LUAPKG="lua5.2"
 CONFIG_EXTRA_CFLAGS="-g"
 CONFIG_BOOTLOADER_GRUB=y
 CONFIG_DOWNLOAD=y
-CONFIG_HASH_VERIFY=y
+CONFIG_DOWNLOAD_SSL=y
+CONFIG_SIGNED_IMAGES=y
 CONFIG_ENCRYPTED_IMAGES=y
 CONFIG_SURICATTA=y
+CONFIG_SURICATTA_SSL=y
 CONFIG_WEBSERVER=y
 CONFIG_MONGOOSESSL=y
 CONFIG_UBIVOL=y
