Add SSBL Handler
SSBL (Second Stage Boot Loader) is a way outside the bootloader to swap
different software set. A duplicated structure is saved on flash
(currently, just NOR flash is supported) and each of them contains data
for an image to be loaded as first step by a bootloader. The structure
contains an "age" field to check which is the currently active software
set. The handler acts as a switch: it does not install any image and it
registers itself as scripthandler. When called, it checks which is the
inactive SSBL and updates with new data, incrementing the age field to
make it active.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -212,6 +212,17 @@ config BOOTLOADERHANDLER
 	  Enable it to change bootloader environment
 	  during the installation process.
 
+config SSBLSWITCH
+	bool "Second Stage Switcher"
+	depends on MTD
+	default n
+	help
+	  This handler allows to switch between two software set
+	  based on an administration block stored in flash (CFI interface).
+	  It works like the switch of UBI and allow to switch in an atomic
+	  way between two software set. It can be used to reliable update
+	  a second stage bootloader.
+
 config UCFWHANDLER
 	bool "microcontroller firmware update"
 	depends on HAVE_LIBGPIOD
