swupdate: add pre-update command hook
The --preupdate (-P) parameter allows to specify a command to run before
initiating the upgrade.

Signed-off-by: Antoine Girard-Vallée <antoine.girard-vallee@savoirfairelinux.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -23,6 +23,9 @@
 # aes-key-file		: string
 #			  file containing the symmetric key for
 #			  image decryption
+# preupdatecmd		: string
+#			  command to be executed right before the update
+#			  is installed
 # postupdatecmd		: string
 #			  command to be executed after a successful update
 globals :
