--- a/Makefile.flags
+++ b/Makefile.flags
@@ -180,6 +180,9 @@ endif
 
 ifeq ($(CONFIG_SYSTEMD),y)
 LDLIBS += systemd
+ifneq ($(CONFIG_SYSTEMD_SYSTEM_UNITDIR),)
+export SYSTEMD_SYSTEM_UNITDIR=$(CONFIG_SYSTEMD_SYSTEM_UNITDIR)
+endif
 endif
 
 ifeq ($(CONFIG_BOOTLOADER_EBG),y)
