Add Zstd compression support
Zstd compression support can now be enabled with the CONFIG_ZSTD build
configuration.

This commit extends the 'compressed' field in the sw-description,
allowing to specify 'compressed = "zstd"' or 'compressed = "zlib". The
old method of specfying the boolean 'compressed = true' will default to
using the 'zlib' format.

Signed-off-by: Hosgor, Tolga (IOT DS EU TR MTS) <tolga.hosgor@siemens.com>

--- a/Kconfig
+++ b/Kconfig
@@ -61,6 +61,10 @@ config HAVE_ZLIB
 	bool
 	option env="HAVE_ZLIB"
 
+config HAVE_ZSTD
+	bool
+	option env="HAVE_ZSTD"
+
 config HAVE_LIBSSL
 	bool
 	option env="HAVE_LIBSSL"
@@ -445,6 +449,10 @@ config GUNZIP
 	bool
 	depends on HAVE_ZLIB
 	default y
+
+config ZSTD
+	bool "Zstd compression support"
+	depends on HAVE_ZSTD
 
 source parser/Config.in
 source handlers/Config.in
