--- a/Makefile.deps
+++ b/Makefile.deps
@@ -38,6 +38,10 @@ ifeq ($(HAVE_ZLIB),)
 export HAVE_ZLIB = y
 endif
 
+ifeq ($(HAVE_ZSTD),)
+export HAVE_ZSTD = y
+endif
+
 ifeq ($(HAVE_LIBUBOOTENV),)
 export HAVE_LIBUBOOTENV = y
 endif
