Add disk partitioner handler
Add handler to change partition of a block device.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.deps
+++ b/Makefile.deps
@@ -14,6 +14,10 @@ ifeq ($(HAVE_LIBCURL),)
 export HAVE_LIBCURL = y
 endif
 
+ifeq ($(HAVE_LIBFDISK),)
+export HAVE_LIBFDISK = y
+endif
+
 ifeq ($(HAVE_LIBGPIOD),)
 export HAVE_LIBGPIOD = y
 endif
