--- a/Kconfig
+++ b/Kconfig
@@ -33,6 +33,10 @@ config HAVE_LIBCURL
 	bool
 	option env="HAVE_LIBCURL"
 
+config HAVE_LIBFDISK
+	bool
+	option env="HAVE_LIBFDISK"
+
 config HAVE_LIBGPIOD
 	bool
 	option env="HAVE_LIBGPIOD"
