examples: add timeout to Webserver setup
Timeout was introduced with 37089b0caa335bead2c800ef6966fe6e531b8c20,
add it to the example for configuration file.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -172,10 +172,15 @@ suricatta :
 # run-postupdate	: boolean (default true)
 #			  run the postupdate command automatically after
 #			  a successful update
+# timeout		: timeout in seconds to monitor the connection
+#			  when an update is started. If no data is received
+#			  during this time, connection is closed by the Webserver
+#			  and update is aborted.
 
 webserver :
 {
 	document_root = "./www";
 	userid		= 1000;
 	groupid		= 1000;
+	timeout		= 20;
 };
