travis: set libgpiod version
Fixes:

 configure: error: "libgpiod needs linux headers version >= v5.5.0"

Signed-off-by: Pierre-Jean Texier <pjtexier@koncepto.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ script:
     - sudo install -m 755 -d /usr/include/efibootguard
     - sudo install -m 644 include/ebgenv.h /usr/include/efibootguard/ebgenv.h
     - cd ..
-    - git clone https://git.kernel.org/pub/scm/libs/libgpiod/libgpiod.git
+    - git clone -b v1.4.1 https://git.kernel.org/pub/scm/libs/libgpiod/libgpiod.git
     - cd libgpiod
     - mkdir -p include/linux
     - cp /usr/src/linux-headers-$(uname -r)/include/linux/compiler_types.h include/linux/.
