IPC: factor out pthread-based methods
Factor out the pthread-based IPC interface methods described in
swupdate-ipc.rst, Section "Client Library", into a separate
compilation unit ipc/network_ipc-if.c, leaving the "plumbing"
methods in ipc/network_ipc.c.

This allows, e.g., the Lua shared library binding to use the
"plumbing" methods while not pulling in the pthread dependency.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/ipc/Makefile
+++ b/ipc/Makefile
@@ -1,6 +1,6 @@
 # Copyright (C) 2014-2018 Stefano Babic <sbabic@denx.de>
 #
 # SPDX-License-Identifier:     GPL-2.0-or-later
-lib-y			+= network_ipc.o progress_ipc.o
+lib-y			+= network_ipc.o network_ipc-if.o progress_ipc.o
 
 EXTRA_CFLAGS += -fPIC
