test: fix suricatta-tests and move them to tests
Fix build of test unit under suricatta. Move them to the general
directory for testing, and factorize Makefile

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/test/Makefile
+++ b/test/Makefile
@@ -20,6 +20,8 @@ tests-$(CONFIG_HASH_VERIFY) += test_hash
 ifeq ($(CONFIG_SIGALG_RAWRSA),y)
 tests-$(CONFIG_SIGNED_IMAGES) += test_verify
 endif
+tests-$(CONFIG_SURICATTA_HAWKBIT) += test_json
+tests-$(CONFIG_SURICATTA_HAWKBIT) += test_server_hawkbit
 
 ccflags-y += -I$(src)/../
 
@@ -57,7 +59,7 @@ tests: $(tests-objs) $(tests-lnk)
 	@+$(foreach var,$(TARGETS),$(EXECUTE_TEST);)
 else
 tests:
-	@$(info crypto functions are disabled, nothing to test.)
+	@$(info nothing to test.)
 	@:
 endif
 
