Makefile: Fix out of tree build for documentation
The doc/Makefile expects to be run from the source directory (e.g. with
a given BUILDDIR parameter).

Tested with make targets "help", "clean" and "html" for in-tree and
out-of-tree build.

Fixes: 58a4c02953 ("Build documentation from main Makefile")
Signed-off-by: Christian Eggers <ceggers@arri.de>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.help
+++ b/Makefile.help
@@ -26,5 +26,5 @@ help:
 	@echo '  randconfig		- generate a random configuration'
 	@echo
 	@echo 'Documentation:'
-	@make -C doc help
+	@$(MAKE) -f $(srctree)/doc/Makefile help
 
