examples: add enable attribute to suricatta section
Reorder the attribute and fix/extend comments.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -104,7 +104,16 @@ identify : (
 # retry			: integer
 #			  number of retries to connect to server
 # retrywait		: integer
-# cafile		: Certificate Authority certificate
+# userid		: integer
+#			  userID for Webserver process
+# groupid		: integer
+#			  groupId for Webserver process
+# enable		: bool
+# 			  default=true
+# 			  If set to false, suricatta do not try to connect to the server
+# 			  Enable can be done then via IPC
+# cafile		: string
+# 			  File with Public Certificate Authority
 # sslkey		: string
 #			  path of the file containing the key for ssl connection
 # sslcert		: string
@@ -133,6 +142,7 @@ suricatta :
 	loglevel	= 10;
 	userid		= 1000;
 	groupid		= 1000;
+	enable		= true;
 /*
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
