Move fixed option into core directory
core and corelib have the following meaning:

- core contains modules that are always built into SWUpdate.
- corelib contains central components that can be enabled/disabled via
Kconfig.

During the development, the original meaning was lost and corelib
contains components that cannot be disabled. Clean up this and move fix
components into the core directory.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/core/Makefile
+++ b/core/Makefile
@@ -17,3 +17,10 @@ obj-y += swupdate.o \
 	 pctl.o \
 	 state.o \
 	 syslog.o \
+	 installer.o \
+	 network_thread.o \
+	 stream_interface.o \
+	 progress_thread.o \
+	 parsing_library.o \
+	 artifacts_versions.o \
+	 swupdate_dict.o
