Support systems without locale in toolchain
Signed-off-by: Mauro Condarelli <mc5686@mclink.it>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -186,6 +186,14 @@ config ARCHIVE
 
 comment "archive support needs libarchive"
 	depends on !HAVE_LIBARCHIVE
+	
+config LOCALE
+	bool "Locale support for filenames"
+	depends on ARCHIVE
+	default y
+	help
+	  Option to remove attempts to use locale in systems
+	  without locale support in toolchain.
 
 config REMOTE_HANDLER
 	bool "Remote handler"
